# anything-llm-helm-chart

./: README.md  index.yaml
charts/anything-llm/: Chart.yaml  README.md  README.md.gotmpl  values-sso-test.yaml  values-test.yaml  values.yaml
charts/anything-llm/templates/: job.yaml  pvc.yaml  service.yaml  sso-configmap.yaml  sso-deployment.yaml  sso-ingress.yaml  sso-migration-script-configmap.yaml  sso-migrations-job.yaml  sso-secret.yaml  sso-service.yaml
sso-microservice/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
sso-microservice/deploy/: Dockerfile  README.md
sso-microservice/docs/: APP_ARCHITECTURE.md
sso-microservice/src/sso_anythingllm_dto/: pyproject.toml
sso-microservice/src/sso_anythingllm_dto/src/sso_anythingllm_dto/: __init__.py  api_key.py  user.py
sso-microservice/src/sso_anythingllm_dto/src/sso_anythingllm_dto/config/: anything_llm.py  keycloak.py
sso-microservice/src/sso_anythingllm_dto_entity_mapper/: pyproject.toml
sso-microservice/src/sso_anythingllm_dto_entity_mapper/src/sso_anythingllm_dto_entity_mapper/: __init__.py  api_key.py  user.py
sso-microservice/src/sso_anythingllm_dto_entity_mapper/tests/: test_model_mappers.py  test_provider_mappers.py
sso-microservice/src/sso_anythingllm_dto_to_mapper/: pyproject.toml
sso-microservice/src/sso_anythingllm_dto_to_mapper/src/sso_anythingllm_dto_to_mapper/: __init__.py  user_mapper.py
sso-microservice/src/sso_anythingllm_dto_to_mapper/tests/: test_model_instance_mappers.py
sso-microservice/src/sso_anythingllm_entity/: pyproject.toml
sso-microservice/src/sso_anythingllm_entity/docs/: DATABASE_ERD.md
sso-microservice/src/sso_anythingllm_entity/src/sso_anythingllm_entity/: __init__.py  api_key.py  enums.py  schema.dbml  user.py
sso-microservice/src/sso_anythingllm_facade/: LICENSE  pyproject.toml
sso-microservice/src/sso_anythingllm_facade/src/sso_anythingllm_facade/: __init__.py  exceptions.py  sso_facade.py
sso-microservice/src/sso_anythingllm_facade/src/sso_anythingllm_facade/interfaces/: __init__.py  sso_facade_interface.py
sso-microservice/src/sso_anythingllm_repository/: README.md  pyproject.toml
sso-microservice/src/sso_anythingllm_repository/examples/: usage_example.py  user_repository_example.py
sso-microservice/src/sso_anythingllm_repository/migrations/: env.py
sso-microservice/src/sso_anythingllm_repository/migrations/versions/: 20250722_112720_883e33cb5cf8_initial_tables_from_sqlmodel_entities.py
sso-microservice/src/sso_anythingllm_repository/src/sso_anythingllm_repository/: __init__.py  anything_llm_repository.py  api_key_repository.py  config.py  exceptions.py  setup_di.py  system_health_repository.py  user_repository.py
sso-microservice/src/sso_anythingllm_repository/src/sso_anythingllm_repository/interfaces/: __init__.py  anything_llm_repository_interface.py  api_key_repository_interface.py  user_repository_interface.py
sso-microservice/src/sso_anythingllm_repository/tests/: conftest.py  test_anything_llm_repository.py  test_api_key_repository.py  test_api_key_repository_integration.py  test_migrations.py  test_user_repository.py  test_user_repository_integration.py
sso-microservice/src/sso_anythingllm_rest/: pyproject.toml
sso-microservice/src/sso_anythingllm_rest/src/sso_anythingllm_rest/: __init__.py  dependencies.py  main.py  setup_di.py
sso-microservice/src/sso_anythingllm_rest/src/sso_anythingllm_rest/endpoints/: __init__.py  sso.py
sso-microservice/src/sso_anythingllm_service/: api_key_service_example.py  pyproject.toml
sso-microservice/src/sso_anythingllm_service/src/sso_anythingllm_service/: __init__.py  api_key_service.py  auth_service.py  setup_di.py  sso_service.py  user_service.py
sso-microservice/src/sso_anythingllm_service/src/sso_anythingllm_service/config/: anything_llm.py  keycloak.py
sso-microservice/src/sso_anythingllm_service/src/sso_anythingllm_service/interfaces/: __init__.py  api_key_service_interface.py  auth_service_interface.py  sso_service_interface.py  user_service_interface.py
sso-microservice/src/sso_anythingllm_service/src/sso_anythingllm_service/monitoring/: __init__.py  anythingllm_api_health_monitor.py  database_health_monitor.py
sso-microservice/src/sso_anythingllm_service/tests/: conftest.py  test_api_key_service.py
sso-microservice/src/sso_anythingllm_to/: pyproject.toml
sso-microservice/src/sso_anythingllm_to/src/sso_anythingllm_to/: __init__.py  user_tos.py
