[project]
name = "sso_anythingllm_dto"
description = "Data Transfer Objects for SSO AnythingLLM integration."
requires-python = ">=3.11,<3.12"
dynamic = ["version"]
dependencies = [
    "pydantic>=2.10.6",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^']+)"

[tool.hatch.build.targets.wheel]
packages = ["src/sso_anythingllm_dto"]
include = ["VERSION"]