[project]
name = "sso_anythingllm_dto_to_mapper"
description = "DTO to Transfer Object Mappers for AnythingLLM SSO integration"
requires-python = ">=3.11,<3.12"
dynamic = ["version"]
dependencies = [
    "sso_anythingllm_dto",
    "sso_anythingllm_to",
    "kink"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^']+)"

[tool.hatch.build.targets.wheel]
packages = ["src/sso_anythingllm_dto_to_mapper"]
include = ["VERSION"]

[tool.uv]
package = true

[tool.uv.sources]
sso_anythingllm_dto = { workspace = true }
sso_anythingllm_to = { workspace = true }