[project]
name = "sso_anythingllm_entity"
description = "Database Entities for SSO AnythingLLM integration"
requires-python = ">=3.11,<3.12"
dynamic = ["version"]
dependencies = [
    "sqlmodel",
    "alembic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^']+)"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/sso_anythingllm_entity"]
include = ["VERSION"]