[project]
name = "sso_anythingllm_facade"
description = "Facade Layer for AnythingLLM SSO integration"
requires-python = ">=3.11,<3.12"
dynamic = ["version"]
dependencies = [
    "sso_anythingllm_service",
    "sso_anythingllm_dto",
    "kink"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^']+)"

[tool.hatch.build.targets.wheel]
packages = ["src/sso_anythingllm_facade"]
include = ["VERSION"]

[tool.uv]
package = true

[tool.uv.sources]
sso_anythingllm_service = { workspace = true }
sso_anythingllm_dto = { workspace = true }
