[project]
name = "sso_anythingllm_to"
description = "Transfer Objects for AnythingLLM SSO integration"
requires-python = ">=3.11,<3.12"
dynamic = ["version"]
dependencies = [
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^']+)"

[tool.hatch.build.targets.wheel]
packages = ["src/sso_anythingllm_to"]
include = ["VERSION"]

[tool.uv]
package = true